<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stat_button_date_container"
    tools:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <Button
        android:id="@+id/stat_weekButton"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:fontFamily="@font/maruburi_bold"
        android:text=""
        style="@style/NORMAL_WHITE"
        android:background="@drawable/button_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/stat_monthButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <Button
        android:id="@+id/stat_monthButton"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/maruburi_bold"
        style="@style/NORMAL_WHITE"
        android:text=""
        android:background="@drawable/button_small"
        app:layout_constraintStart_toEndOf="@id/stat_weekButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>