<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.main_userinfoview.UserInfoViewFragment">

  <include
    android:id="@+id/user_info_wrapper"
    layout="@layout/user_info_wrapper"
    android:layout_width="0dp"
    android:layout_height="wrap_content"

    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.25"
    app:layout_constraintWidth_percent="0.6" />

  <Button
    android:id="@+id/logout_button"
    style="@style/NORMAL_WHITE_BOLD"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="0dp"
    android:background="@drawable/button"
    android:text="로그아웃"

    app:layout_constraintBottom_toBottomOf="@id/logo"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/user_info_wrapper" />
  <ImageView
    android:id="@+id/logo"
    android:layout_width="200dp"
    android:layout_height="0dp"

    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHeight_percent="0.1"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/logout_button"
    app:layout_constraintVertical_bias="0.15"
    app:srcCompat="@drawable/text_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>