<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="0dp"
    android:layout_height="wrap_content"

    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.25"
    app:layout_constraintHorizontal_bias="0.55"
    app:layout_constraintWidth_percent="0.6">

    <ImageButton
        android:id="@+id/pen_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"

        android:adjustViewBounds="true"
        android:background="@color/white"
        android:scaleType="centerInside"
        android:src="@drawable/pen"
        android:visibility="visible"

        app:layout_constraintBottom_toBottomOf="@id/nickname_edittext"
        app:layout_constraintEnd_toEndOf="@id/border"
        app:layout_constraintStart_toEndOf="@id/nickname_edittext"
        app:layout_constraintTop_toTopOf="@id/nickname_edittext" />

    <EditText
        android:id="@+id/nickname_edittext"
        style="@style/BIG_BLACK_BOLD"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:background="@null"
        android:inputType="text"

        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/border"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/border"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/border"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/black"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nickname_edittext"
        app:layout_constraintBottom_toTopOf="@id/nickname_length_warning_text" />

    <TextView
        android:id="@+id/nickname_length_warning_text"
        style="@style/SMALL_RED"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/nickname_too_long"

        app:layout_constraintBottom_toTopOf="@id/created_at_text"
        app:layout_constraintEnd_toEndOf="@id/nickname_edittext"
        app:layout_constraintStart_toStartOf="@id/nickname_edittext"
        app:layout_constraintTop_toBottomOf="@id/nickname_edittext"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.85" />


    <TextView
        android:id="@+id/created_at_text"
        style="@style/NORMAL_BLACK"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:bufferType="spannable"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/nickname_edittext"
        app:layout_constraintStart_toStartOf="@id/nickname_edittext"
        app:layout_constraintTop_toBottomOf="@id/nickname_length_warning_text"
        app:layout_constraintWidth_percent="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>